<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.fragment.WordsFragment">
    <item android:id="@+id/action_filter_words"
          android:title="@string/find_words"
          android:orderInCategory="50"
          app:showAsAction="never"/>
    <item
          android:title="@string/menu_group_training"
          android:orderInCategory="100"
          app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_word_recognition"
                  android:title="@string/word_recognition"
                  android:orderInCategory="200"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_word_matcher"
                  android:title="@string/match_words"
                  android:orderInCategory="300"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_word_article_matcher"
                  android:title="@string/match_word_article"
                  android:orderInCategory="400"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_order_words_in_sentence"
                  android:title="@string/order_words_in_sentence"
                  android:orderInCategory="500"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_grammar_filter"
                  android:title="@string/grammar_filter"
                  android:orderInCategory="600"
                  app:showAsAction="never"/>
        </menu>
    </item>
    <item
          android:title="@string/menu_group_data"
          android:orderInCategory="200"
          app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_add_word"
                  android:title="@string/add_word"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_parse_words"
                  android:title="@string/parse_words"
                  android:orderInCategory="200"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_use_db"
                  android:title="@string/use_db"
                  android:orderInCategory="300"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_import_words"
                  android:title="@string/import_words"
                  android:orderInCategory="400"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_import_words_from_file"
                  android:title="@string/import_words_from_file"
                  android:orderInCategory="500"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_export_words_to_file"
                  android:title="@string/export_words_to_file"
                  android:orderInCategory="600"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_set_knowledge"
                  android:title="@string/action_set_knowledge"
                  android:orderInCategory="700"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_clean_db"
                  android:title="@string/clean_db"
                  android:orderInCategory="800"
                  app:showAsAction="never"/>
        </menu>
    </item>
    <item
          android:title="@string/menu_group_settings"
          android:orderInCategory="300"
          app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_select_voices"
                  android:title="@string/select_voices"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_configuration_presets"
                  android:title="@string/configuration_presets"
                  android:orderInCategory="200"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_settings"
                  android:title="@string/action_settings"
                  android:orderInCategory="300"
                  app:showAsAction="never"/>
        </menu>
    </item>
</menu>
